--- a/html/home.html
+++ b/html/home.html
@@ -8,85 +8,37 @@
   <meta name="Keywords" content="">
   <meta name="Description" content="">
   <link href="../css/ga_styles.css" type="text/css" rel="stylesheet"/>
-  <script src="../js/jquery-1.8.3.min.js" type="text/javascript"></script>  
+  <script src="../js/jquery-1.8.3.min.js" type="text/javascript"></script>
+  <script src="../js/jquery-ui-1.8.21.custom.min.js" type="text/javascript"></script>  
   <script type="text/javascript" src="../js/datepicker.js"></script>
   <link rel="stylesheet" type="text/css" href="../css/base.css" />
   <link rel="stylesheet" type="text/css" href="../css/clean.css" />  
-  <script src="../js/ga_style.js" type="text/javascript"></script>
+  <script type="text/javascript" src="../js/ga_style.js"></script>
   <script type="text/javascript" src="http://www.google.com/jsapi"></script>
+   <script type="text/javascript" src="../js/validation.js"></script>
   <script type="text/javascript" src="pico/client.js"></script>
   <script type="text/javascript">
 
-  today_date = '2012-11-19';
-  //call to function
+  function main(mart){
+         init_params();
+         load_overview(mart);
+         init_params();
+		 load_graph(mart);
+		 draw_extra_flights();
+		 //populate_dropdown();
+  }
+
+ //call to function
   pico.load('handler');
   pico.main = function(){
-  	get_flight_tickets_domestic();
-  	get_flight_tickets_international();
-  	get_bus_tickets();
-  	get_hotel_bookings();
+          main('Flights');
   }
-
-  function get_flight_tickets_domestic(){
-  	set1 = {'mart':'flight_paymentdetails','metric':'tickets','timeseries':'bookingtime','timerange':['hour',today_date,today_date]};
-  	set2 = {};
-  	dimensions = [];
-  	summarize_number = 1;
-  	persistantfilter = "[['typeoftravel','Domestic']]";
-  	viewfilter = "nofilter";
-  	var displayMessage = function(message){
-  		console.log(message);
-  	}
-  	handler.get_details(set1,set2,dimensions,persistantfilter,viewfilter,summarize_number,displayMessage);
-  }
-
-  function get_flight_tickets_international(){
-  	set1 = {'mart':'flight_paymentdetails','metric':'tickets','timeseries':'bookingtime','timerange':['hour',today_date,today_date]};
-  	set2 = {};
-  	dimensions = [];
-  	summarize_number = 1;
-  	viewfilter = "nofilter";
-  	persistantfilter = "[['typeoftravel','International']]"
-  	var displayMessage = function(message){
-  		console.log(message);
-		f = message[0]['total'][0][1]
-		//alert(f);
-		
-  	}
-  	handler.get_details(set1,set2,dimensions,persistantfilter,viewfilter,summarize_number,displayMessage);
-  }
-
-  function get_bus_tickets(){
-  	set1 = {'mart':'bus_paymentdetails','metric':'tickets','timeseries':'timeoftransaction','timerange':['hour',today_date,today_date]};
-  	set2 = {};
-  	dimensions = [];
-  	summarize_number = 1;
-  	viewfilter = "nofilter";
-  	persistantfilter = "[]";
-  	var displayMessage = function(message){
-  		console.log(message);
-  	}
-  	handler.get_details(set1,set2,dimensions,persistantfilter,viewfilter,summarize_number,displayMessage);
-  }
-
-  function get_hotel_bookings(){
-  	set1 = {'mart':'hotel_paymentdetails','metric':'Room Nights','timeseries':'bookingtime','timerange':['hour',today_date,today_date]};
-  	set2 = {};
-  	dimensions = [];
-  	summarize_number = 1;
-  	viewfilter = "nofilter";
-  	persistantfilter = "[]";
-  	var displayMessage = function(message){
-  		console.log(message);
-  	}
-  	handler.get_details(set1,set2,dimensions,persistantfilter,viewfilter,summarize_number,displayMessage);
-  }
-
+	
+ 
   </script>
-
  </head>
 
- <body>
+ <body class="flights">
 	<div id="ga_outerWrapper">
 		<div class="ga_innerWrapper">
 			<!-- Start Logo -->			
@@ -95,16 +47,11 @@
 			<div class="clearfix"></div>
 			<!-- Left Side -->
 			<div id="ga_aside">							
-				<form id="search" method="post" action="">
+				<!-- <form id="search" method="post" action="">
 					<input type="text" name="search" id="searchBox" value=""/>
-				</form>
+				</form> -->
 				<ul class="mainNav">
-					<li><a href="#">Flights</a></li>
-					<li><a href="#">Flights(Intl)</a></li>
-					<li><a href="#">Hotels</a></li>
-					<li><a href="#">Holidays</a></li>
-					<li><a href="#">Bus</a></li>
-					<li><a href="#">Taxi</a></li>
+					
 				</ul>
 			</div>
 			<!-- End Left Side -->
@@ -112,52 +59,16 @@
 			<div id="ga_mainContent">
 				<!-- Start tabs -->
 				<div id="tabWrapper">
-					<ul class="tabs">
+					<!-- <ul class="tabs">
 						<li><a href="#content_1">Traffic Analysis</a></li>
 						<li><a href="#content_2">CRM Performance</a></li>
 						<li><a href="#content_3">Financial Performance</a></li>
 						<li><a href="#content_4">User Analysis</a></li>						
-					</ul>
+					</ul> -->
 					<div id="tabContent">
 						<!-- Start:Tab content1 -->
 						<div id="content_1">
-							<!-- Start Bookings in past 24 hours -->
-							<div id="bookingResults">
-								<h2>Bookings in past 24 hours</h2>
-								<ul>
-									<li>
-										<h3>Flights</h3>
-										<em>3000</em>
-										<small class="inc">3%</small>
-									</li>
-									<li>
-										<h3>Flights(intl)</h3>
-										<em>1000</em>
-										<small class="dec">-3%</small>
-									</li>
-									<li>
-										<h3>Hotels</h3>
-										<em>400</em>
-										<small class="dec">-3%</small>
-									</li>
-									<li>
-										<h3>Holidays</h3>
-										<em>200</em>
-										<small class="dec">-3%</small>
-									</li>
-									<li>
-										<h3>Bus</h3>
-										<em>500</em>
-										<small class="dec">-3%</small>
-									</li>
-									<li class="last">
-										<h3>Taxi</h3>
-										<em>150</em>
-										<small class="dec">-3%</small>
-									</li>
-								</ul>
-							</div>
-							<!-- End Bookings in past 24 hours -->
+							
 							<!-- Start: Segments -->
 							<div id="segments_1" class="segments">
 								<form id="" method="" action="">
@@ -222,15 +133,29 @@
 								</form>
 							</div>
 							<!-- End Segments2 -->
+							<div class="segments">
+								<ul>
+									<li>										
+										<select id="ByTravelStat_1">
+											<option>Select</option>
+										</select>	
+									</li>
+									<li>										
+										<select id="ByTravelStat_2">
+											<option>Select</option>
+										</select>
+									</li>
+								</ul>
+							</div>
 							<!-- start Overview -->
 							<div id="overview">
 								<div class="hgroup">
 									<h2>Overview</h2>									
 									<div id="ov_TimeSeries">
-										<a href="#">Hourly</a>
-										<a href="#">Day</a>
-										<a href="#">Week</a>
-										<a href="#" class="last">Month</a>
+										<a href="#" class="active" id="hour">Hourly</a>
+										<a href="#" id="date">Day</a>
+										<a href="#" id="dayofweek">Week</a>
+										<a href="#" id="month" class="last">Month</a>
 									</div>
 									<div id="userType">
 										<span>User Type</span>
@@ -242,63 +167,28 @@
 									</div>
 								</div>
 								<div class="ov_Report">
-									<ul>
-										<li>
-											<h4>Unique Visitors</h4>
-											<em>216,136</em>
-											<small class="inc">3%</small>
-											<a href="#" class="view">view</a>
-										</li>
-										<li>
-											<h4>Conversions</h4>
-											<em>116,136</em>
-											<small class="dec">-3%</small>
-											<a href="#" class="view">view</a>
-										</li>
-										<li>
-											<h4>Rate</h4>
-											<em>60%</em>
-											<small class="dec">-3%</small>
-											<a href="#" class="view">view</a>
-										</li>
-									</ul>
-									<ul>
-										<li>
-											<h4>Visits</h4>
-											<em>16,136</em>
-											<small class="dec">-3%</small>
-											<a href="#" class="view">view</a>
-										</li>
-										<li>
-											<h4>New Visitors</h4>
-											<em>16,136</em>
-											<small class="dec">-3%</small>
-											<a href="#" class="view">view</a>
-										</li>
-										<li>
-											<h4>Bounce Rate</h4>
-											<em>20%</em>
-											<small class="dec">-3%</small>
-											<a href="#" class="view">view</a>
-										</li>
-									</ul>
+									<ul></ul>
 								</div>
 								<div class="ov_graph">
-									<h4>Activity Volume</h4>
-									<div class="figHolder"><img src="../images/ov_graph.jpg" alt=" Activity Volume"/></div>
-								</div>								
+									<!--<h4>Activity Volume</h4>-->
+									<div class="figHolder" id="line_chart"></div>
+								</div>
+								<!-- <div id="ov_chart">
+								<div id="pie_chart"></div>
+								<div id="pie_chart1"></div>
+								</div> -->
 								<ul id="ov_chart">
-									<li>
-										<h4>Total Visitors</h4>
-										<div class="figHolder"><img src="../images/ov_totalVis.jpg" alt=" Activity Volume"/></div>
+									<li >
+										<!-- <h4>Total Visitors</h4> -->
+										<div class="figHolder" id="pie_chart"></div>
 									</li>
 									<li>
-										<h4>Total Conversions</h4>
-										<div class="figHolder"><img src="../images/ov_totalCon.jpg" alt=" Activity Volume"/></div>
+										<!-- <h4>Total Conversions</h4> -->
+										<div class="figHolder" id="pie_chart1"></div>
 									</li>
 									<li class="last">
-										<h4>Conversion Rate</h4>
-										<div class="figHolder"><img src="../images/ov_conv.jpg" alt=" Activity Volume"/></div>
+										<!-- <h4>Conversion Rate</h4> -->
+										<div class="figHolder"></div>
 									</li>
 								</ul>
 							</div>
