improving url mappings

--- a/html/financial1.html
+++ b/html/financial1.html
@@ -17,7 +17,7 @@
   <script type="text/javascript" src="http://www.google.com/jsapi"></script>
   <script type="text/javascript" src="../js/validation.js"></script>
   <script type="text/javascript" src="../js/underscore-min.js"></script>
-  <script type="text/javascript" src="pico/client.js"></script>
+  <script type="text/javascript" src="../pico/client.js"></script>
 
   <script type="text/javascript">	
 	
@@ -29,7 +29,7 @@
   }
 
  //call to function
-   pico.load('handler');
+  pico.load('handler');
   pico.main = function(){
           main('Flights');
   }
@@ -57,12 +57,12 @@
 			<div id="ga_mainContent">
 				<!-- Start tabs -->
 				<div id="tabWrapper">
-					<!-- <ul class="tabs">
+					 <ul class="tabs">
 						<li><a href="#content_1">Traffic Analysis</a></li>
 						<li><a href="#content_2">CRM Performance</a></li>
 						<li><a href="#content_3">Financial Performance</a></li>
 						<li><a href="#content_4">User Analysis</a></li>						
-					</ul> -->
+					</ul> 
 					<div id="tabContent">
 						<!-- Start:Tab content1 -->
 						<div id="content_1">							
