--- a/html/index.html
+++ b/html/index.html
@@ -35,9 +35,9 @@
 			<div class="clearfix"></div>
 			<!-- Left Side -->
 			<div id="ga_aside">							
-				<form id="search" method="post" action="">
+		<!--		<form id="search" method="post" action="">
 					<input type="text" name="search" id="searchBox" value=""/>
-				</form>
+            </form> -->
 				<ul class="mainNav">
 					<li><a href="flights.html">Flights</a></li>
 					<li><a href="#">Flights(Intl)</a></li>
@@ -53,10 +53,10 @@
 				<!-- Start tabs -->
 				<div id="tabWrapper">
 					<ul class="tabs">
-						<li><a href="/html/traffic.html">Traffic Analysis</a></li>
-						<li><a href="/html/crm.html">CRM Performance</a></li>
-						<li><a href="/html/financial.html">Financial Performance</a></li>
-						<li><a href="/html/user.html">User Analysis</a></li>						
+						<li><a href="traffic.html">Traffic Analysis</a></li>
+						<li><a href="crm.html">CRM Performance</a></li>
+						<li><a href="financial.html">Financial Performance</a></li>
+						<li><a href="user.html">User Analysis</a></li>						
 					</ul>
 					<div id="tabContent">
 						<!-- Start:Tab content1 -->
