--- a/html/index.html
+++ b/html/index.html
@@ -7,23 +7,31 @@
   <meta name="Author" content="">
   <meta name="Keywords" content="">
   <meta name="Description" content="">
-  <link href="../css/ga_styles.css" type="text/css" rel="stylesheet"/>
-  <script src="../js/jquery-1.8.3.min.js" type="text/javascript"></script>  
+   <link href="../css/ga_styles.css" type="text/css" rel="stylesheet"/>
+  <script src="../js/jquery-1.8.3.min.js" type="text/javascript"></script>
+  <script src="../js/jquery-ui-1.8.21.custom.min.js" type="text/javascript"></script>  
   <script type="text/javascript" src="../js/datepicker.js"></script>
   <link rel="stylesheet" type="text/css" href="../css/base.css" />
   <link rel="stylesheet" type="text/css" href="../css/clean.css" />  
-  <script src="../js/ga_style.js" type="text/javascript"></script>
+  <script type="text/javascript" src="../js/ga_style.js"></script>
   <script type="text/javascript" src="http://www.google.com/jsapi"></script>
-  <script type="text/javascript" src="../js/validation.js"></script>
+  <script type="text/javascript" src="../js/validation.js"></script>  
+  <script type="text/javascript" src="../js/underscore-min.js"></script>
   <script type="text/javascript" src="../pico/client.js"></script>
   <script type="text/javascript">
-    //call to function
-    pico.load('handler');
-    pico.main = function(){
-         draw_top_box();
-    }
-  </script>
+    function main(mart){		 
+         load_overview(mart);
+		 load_graph(mart);	
+		 
+  }
 
+ //call to function
+  pico.load('handler');
+  pico.main = function(){
+          main('Flights');
+		  draw_top_box();
+  }
+  </script>
  </head>
 
  <body>
@@ -39,12 +47,11 @@
 					<input type="text" name="search" id="searchBox" value=""/>
 				</form>
 				<ul class="mainNav">
-					<li><a href="flights.html">Flights</a></li>
-					<li><a href="#">Flights(Intl)</a></li>
-					<li><a href="#">Hotels</a></li>
-					<li><a href="#">Holidays</a></li>
-					<li><a href="#">Bus</a></li>
-					<li><a href="#">Taxi</a></li>
+					<li class="active"><a href="#" id="all">All</a></li>
+					<li><a href="#" id="Flights">Flights(Domestic)</a></li>
+					<li><a href="#" id="Flights(intl)">Flights(Intl)</a></li>
+					<li><a href="#" id="Hotels">Hotels</a></li>
+					<li><a href="#" id="Bus">Bus</a></li>
 				</ul>
 			</div>
 			<!-- End Left Side -->
@@ -59,105 +66,66 @@
 						<li><a href="/html/user.html">User Analysis</a></li>						
 					</ul>
 					<div id="tabContent">
-						<!-- Start:Tab content1 -->
-						<div id="content_1">
-							<!-- Start Bookings in past 24 hours -->
-							<div id="bookingResults">
-								<h2>Bookings in past 24 hours</h2>
-								<ul>
-									<li>
-										<h3>Flights</h3>
-										<em class="total"></em>
-										<small class="inc">3%</small>
-									</li>
-									<li>
-										<h3>Flights(intl)</h3>
-										<em class="total"></em>
-										<small class="inc">-3%</small>
-									</li>
-									<li>
-										<h3>Hotels</h3>
-										<em class="total"></em>
-										<small class="inc">-3%</small>
-									</li>
-									<li>
-										<h3>Holidays</h3>
-										<em class="total">NA</em>
-										<small class="inc">NA</small>
-									</li>
-									<li>
-										<h3>Bus</h3>
-										<em class="total"></em>
-										<small class="inc">-3%</small>
-									</li>
-									<li class="last">
-										<h3>Taxi</h3>
-										<em class="total">NA</em>
-										<small class="inc">NA</small>
-									</li>
-								</ul>
-							</div>							
-							<!-- start Overview -->
-							<div id="overview">
-								<div class="hgroup">
-									<h2>Overview</h2>									
-									<div id="ov_TimeSeries">
-										<a href="#">Hourly</a>
-										<a href="#">Day</a>
-										<a href="#">Week</a>
-										<a href="#" class="last">Month</a>
-									</div>
-									<div id="userType">
-										<span>User Type</span>
-										<div class="userType">
-											<a href="#">All</a>
-											<a href="#">Returning</a>
-											<a href="#" class="last">New</a>
-										</div>
+						<!-- Start:Tab content1 -->						
+						<!-- Start Bookings in past 24 hours -->
+						<div id="bookingResults">
+							<h2>Bookings in past 24 hours</h2>
+							<ul></ul>
+						</div>							
+						<!-- start Overview -->
+						<div id="overview">
+							<div class="hgroup">
+								<h2>Overview</h2>									
+								<div id="ov_TimeSeries">
+									<a href="#">Hourly</a>
+									<a href="#">Day</a>
+									<a href="#">Week</a>
+									<a href="#" class="last">Month</a>
+								</div>
+								<div id="userType">
+									<span>User Type</span>
+									<div class="userType">
+										<a href="#">All</a>
+										<a href="#">Returning</a>
+										<a href="#" class="last">New</a>
 									</div>
 								</div>
-								
-								<div class="ov_graph">
-									<!--<h4>Activity Volume</h4>-->
-									<div class="figHolder" id="line_chart"></div>
-								</div>								
-								<!--<ul id="ov_chart">
-									<li>
-										<h4>Total Visitors</h4>
-										<div class="figHolder"></div>
-									</li>
-									<li>
-										<h4>Total Conversions</h4>
-										<div class="figHolder"></div>
-									</li>
-									<li class="last">
-										<h4>Conversion Rate</h4>
-										<div class="figHolder"></div>
-									</li>
-								</ul>-->
 							</div>
-							<!-- End Overview -->
+							
+							<div class="ov_graph_home" id="line_chart"></div>								
+							<!--<ul id="ov_chart">
+								<li>
+									<h4>Total Visitors</h4>
+									<div class="figHolder"></div>
+								</li>
+								<li>
+									<h4>Total Conversions</h4>
+									<div class="figHolder"></div>
+								</li>
+								<li class="last">
+									<h4>Conversion Rate</h4>
+									<div class="figHolder"></div>
+								</li>
+							</ul>-->
 						</div>
-						<!-- End: Tab content1 -->
-						<!-- Start: Tab content2 -->
-						<div id="content_2"> Content2</div>
-						<!-- End: Tab content2 -->
-						<!-- Start: Tab content2 -->
-						<div id="content_3"> Content3</div>
-						<!-- End: Tab content2 -->
-						<!-- Start: Tab content2 -->
-						<div id="content_4"> Content4</div>
-						<!-- End: Tab content2 -->
-						<!-- Start: Tab content2 -->
-						<div id="content_5"> Content5</div>
-						<!-- End: Tab content2 -->
-						</div>					
+						<!-- End Overview -->						
+						<!-- End: content_1 -->						
+					</div>
+					<!-- End: tabContent -->
 				</div>
-				<!-- End tabs -->
+				<!-- End tabWrapper -->
 			</div>
 			<!-- End Main Content -->
 		</div>
 	</div>
-	
+	<script id="ov_bookRes_template" type="text/template">	
+		<% _.each(mart, function (item) { %>
+		<li>
+			<h3><%=item%></h3>
+			<em><img src="../images/ajax-loader.gif"/></em>
+			<small></small>
+		</li>
+		<% }); %> 	
+	</script>
  </body>
 </html>
