--- a/html/user.html
+++ b/html/user.html
@@ -50,7 +50,13 @@
 				<!-- <form id="search" method="post" action="">
 					<input type="text" name="search" id="searchBox" value=""/>
 				</form> -->
-				<ul class="mainNav"></ul>
+				<ul class="mainNav">
+					<li class="active"><a href="#" id="all">All</a></li>
+					<li><a href="#" id="Flights">Flights(Domestic)</a></li>
+					<li><a href="#" id="Flights(intl)">Flights(Intl)</a></li>
+					<li><a href="#" id="Hotels">Hotels</a></li>
+					<li><a href="#" id="Bus">Bus</a></li>
+				</ul>
 			</div>
 			<!-- End Left Side -->
 			<!-- Start Main content -->
