--- a/html/financial.html
+++ b/html/financial.html
@@ -51,10 +51,10 @@
 				</form> -->
 				<ul class="mainNav">
 					<li class="active"><a href="#" id="financial_all">All</a></li>
-					<li><a href="#" id="Flights">Flights(Domestic)</a></li>
-					<li><a href="#" id="Flights(intl)">Flights(Intl)</a></li>
-					<li><a href="#" id="Hotels">Hotels</a></li>
-					<li><a href="#" id="Bus">Bus</a></li>
+					<li><a href="#" id="financial_d_flights">Flights(Domestic)</a></li>
+					<li><a href="#" id="financial_i_flights">Flights(Intl)</a></li>
+					<li><a href="#" id="financial_hotels">Hotels</a></li>
+					<li><a href="#" id="financial_bus">Bus</a></li>
 				</ul>
 			</div>
 			<!-- End Left Side -->
