adding traffic supermart

--- a/html/traffic.html
+++ b/html/traffic.html
@@ -30,7 +30,7 @@
  //call to function
   pico.load('handler');
   pico.main = function(){
-          main('Flights');
+          main('traffic_all');
   }
 	
  
